--- a/index.html
+++ b/index.html
@@ -291,7 +291,11 @@
                 improving the management system for the organization.
               </p>
               <div class="more">
-                <a href="###" class="github-link">Github page</a>
+                <a
+                  href="https://github.com/MinhDucMa/MountainCar-v0"
+                  class="github-link"
+                  >Github page</a
+                >
                 <div class="icon-links">
                   <a href="###"><i class="fa-brands fa-github"></i></a>
                 </div>
@@ -314,7 +318,11 @@
                 car when applying greedy and non-greedy apsilon.
               </p>
               <div class="more">
-                <a href="###" class="github-link">Github page</a>
+                <a
+                  href="https://github.com/MinhDucMa/Chocoholics-Anonymous"
+                  class="github-link"
+                  >Github page</a
+                >
                 <div class="icon-links">
                   <a href="###"><i class="fa-brands fa-github"></i></a>
                 </div>
