Fourth Commmit fixing section link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="Home">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,7 +19,6 @@
     <title>My Information</title>
   </head>
   <body>
-    <a name="Home"></a>
     <!-- navigation bar that help navigate to different section within the page -->
     <div class="nav-container">
       <nav class="nav-section">
