Fixing accessibility issue: "Links must have discernible text"

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   >Github page</a
                 >
                 <div class="icon-links">
-                  <a href="###"><i class="fa-brands fa-github"></i></a>
+                  <div><i class="fa-brands fa-github"></i></div>
                 </div>
               </div>
             </div>
@@ -321,7 +321,7 @@
                   >Github page</a
                 >
                 <div class="icon-links">
-                  <a href="###"><i class="fa-brands fa-github"></i></a>
+                  <div><i class="fa-brands fa-github"></i></div>
                 </div>
               </div>
             </div>
